[metadata]
name = fiesta
version = attr: fiesta.__version__
author = Jiten Dhandha, Zoe Faes, Rowan J. Smith
author_email = jitendhandha@gmail.com
license = GNU General Public License v3.0
license_file = LICENSE.rst
description = Astrophysical toolkit for analysis of filamentary structures
long_description = file: README.md
keywords = astrophysics, filaments
#url = 
github_project = JitenDhandha/fiesta


[options]
packages = find:
python_requires = >=3.0
install_requires =
    numpy
    scipy
    matplotlib
    astropy