[metadata]
name = fiesta-astro
version = attr: fiesta.__version__
author = Jiten Dhandha, Zoe Faes, Rowan J. Smith
author_email = jitendhandha@gmail.com
license = GNU General Public License v3.0
license_file = LICENSE.rst
description = Astrophysical toolkit for analysis of filamentary structures
long_description = file: README.rst
keywords = astrophysics, filaments
#url = 
github_project = JitenDhandha/fiesta

[options]
packages =
    fiesta
python_requires = >=3.0
install_requires =
    numpy
    scipy
    matplotlib
    astropy